Changed GiveUp btn place. Fixed wrong guess display. Fixed z-index GiveUp btn

--- a/src/components/GiveUpBtn/GiveUpBtn.scss
+++ b/src/components/GiveUpBtn/GiveUpBtn.scss
@@ -1,25 +1,19 @@
 .GiveUpBtn {
   background-color: #5c0909;
   color: white;
-  position: absolute;
-  bottom: 45px;
-  left: 116px;
-  width: 80px;
-  z-index: 501;
-  padding: 7px;
+  width: 25%;
+  z-index: 101;
+  padding: 5px;
   font-weight: 500;
   text-transform: uppercase;
   letter-spacing: 0.6px;
   border-radius: 6px;
+  //border-radius: 100%;
+
   border: 2px solid rgb(150, 33, 33);
-  opacity: 0;
+  opacity: 0.5; ///
   transition: opacity 0.8s ease;
   pointer-events: none;
-
-  .GiveUpBtn.showBtn {
-    opacity: 1;
-    pointer-events: all;
-  }
 
   &:hover,
   &:focus {
