--- a/src/components/UserInput/Button/Button.scss
+++ b/src/components/UserInput/Button/Button.scss
@@ -6,9 +6,10 @@ $bg-color: #448159;
   background-color: $bg-color; //guess
   border: 2px solid lighten($bg-color, 20);
 
-  margin: 17px auto;
+  //margin: 17px auto;
+  width: 70%;
   border-radius: 6px;
-  padding: 8px 10px;
+  //padding: 8px 10px;
   min-width: 180px;
   font-weight: 500;
   letter-spacing: 0.6px;
