--- a/src/components/UserInput/UserInput.scss
+++ b/src/components/UserInput/UserInput.scss
@@ -9,6 +9,7 @@
     position: relative;
     width: 85%;
     height: 31px;
+    margin-bottom: 10px;
   }
 
   input {
@@ -16,7 +17,6 @@
     color: rgb(49, 49, 49);
     width: 100%;
     height: 100%;
-
     font-size: 1.7rem;
     letter-spacing: 3px;
     text-align: center;
@@ -32,26 +32,18 @@
       border: none;
     }
   }
-
-  // .invalid:focus {
-  //   border-bottom: 1px solid #c83a3a;
-  // }
-  // input.valid:focus {
-  //   border-right: none;
-  //   border: 1px solid lime;
-  //   box-shadow: 0px 0px 4px white;
-  // }
-  // input::before {
-  //   content: "✅";
-  // }
-
-  // input::before {
-  //   content: "✅";
-  // }
   .guess-result {
     position: absolute;
     font-size: 1.5rem;
     top: 25%;
     right: 8px;
+  }
+
+  .btns {
+    //background-color: black;
+    display: flex;
+    justify-content: space-between;
+    height: 45px;
+    //width: 90%;
   }
 }
